# enhanced-magic-string

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.js  package.json  pnpm-lock.yaml
.changeset/: three-dogs-beam.md
.github/workflows/: CI.yml  build.yml  release.yaml  release.yml  rust-test.yaml
crates/enhanced-magic-string/: CHANGELOG.md  Cargo.toml  README.md
crates/enhanced-magic-string/src/: bundle.rs  chunk.rs  error.rs  lib.rs  magic_string.rs  mappings.rs  types.rs
crates/enhanced-magic-string/src/collapse_sourcemap/: mod.rs
crates/enhanced-magic-string/src/utils/: char_string.rs  common.rs  get_locator.rs  mod.rs
crates/enhanced-magic-string/tests/: bundle.rs  bundle.spec.mjs  getRelativePath.spec.mjs  magic.spec.mjs  magic_string.rs  relative.rs
crates/enhanced-magic-string/tests/common/: mod.rs  utils.mjs
crates/enhanced-magic-string/tests/fixtures/bundle/basic/: input.js  output.js  output.js.map
crates/enhanced-magic-string/tests/fixtures/bundle/basic-multi-byte-char/: input.js  output.js  output.js.map
crates/enhanced-magic-string/tests/fixtures/bundle/basic-multi-byte-char/modules/: m-1.js  m-2.js
crates/enhanced-magic-string/tests/fixtures/bundle/basic/modules/: m-1.js  m-2.js
crates/enhanced-magic-string/tests/fixtures/combine-string/basic/: output.js  output.js.map
crates/enhanced-magic-string/tests/fixtures/get-relative-path/: output.txt
crates/enhanced-magic-string/tests/fixtures/magic-string/: basic.js.map  basic.output.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
scripts/: bump.mjs  release.mjs
(+20 files in other folders)
