[package]
edition = "2021"
name = "enhanced-magic-string"
version = "0.0.1"
description = "Rust based magic-string implementation with sourcemap chains support"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
repository = "https://github.com/farm-fe/enhanced-magic-string"

[dependencies]
sourcemap = "6.2.3"
base64 = "0.21.0"
farmfe_utils = "0.0.3"
regex = "1.10.0"

[dev-dependencies]
glob = "0.3.0"
relative-path = "1.9"
