[package]
edition = "2021"
name = "enhanced-magic-string"
version = "0.1.0"
description = "Rust based magic-string implementation with sourcemap chains support"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
repository = "https://github.com/farm-fe/enhanced-magic-string"
git_release_enable = true

[dependencies]
sourcemap = "9.0.0"
base64 = "0.22.0"
farmfe_utils = "0.1.5"
regex = "1.10.0"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }

[dev-dependencies]
glob = "0.3.0"
relative-path = "1.9"
